# nordic_wifi_direct_p2p_echo

./: CMakeLists.txt  Kconfig  README.md  overlay-p2p-cli.conf  overlay-p2p-go.conf  prj.conf  west.yml
boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf
src/: main.c  net_utils.c  net_utils.h  udp_utils.c  udp_utils.h  wifi_p2p_utils.c  wifi_p2p_utils.h
